--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.4",
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "jquery-prefetch": "~0.1.2"
   }
 }
